plugins {
    id 'groovy'
    id 'java-gradle-plugin'
    id 'maven-publish'
    id 'com.widen.versioning' version '0.3.0'
}

group 'widen'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    maven {
        credentials {
            username System.env.JFROG_USER ?: USER
            password System.env.JFROG_PASS ?: PASSWORD
        }
        url 'https://widen.jfrog.io/widen/repo/'
    }
}

publishing {
    repositories {
        maven {
            credentials {
                username System.env.JFROG_USER ?: USER
                password System.env.JFROG_PASS ?: PASSWORD
            }

            url 'https://widen.jfrog.io/widen/libs-releases-local'
        }
    }
}

dependencies {
    compile 'commons-io:commons-io:2.6'

    testCompile 'org.codehaus.groovy:groovy-all:2.4.12'
    testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
}

gradlePlugin {
    plugins {
        versioning {
            id = 'com.widen.versioning'
            implementationClass = 'com.widen.versioning.VersioningPlugin'
        }
    }
}
